Fix test server package +add copyright message on it

--- a/tester/server/package.json
+++ b/tester/server/package.json
@@ -1,17 +1,18 @@
 {
   "name": "x3dh_server",
   "version": "1.0.0",
-  "description": "A key management server for X3DH",
+  "description": "A key management server for X3DH. This server is for testing purpose only and is intended to work with Lime client, an implementation of the signal protocol for linphone.",
   "main": "x3dh.js",
   "dependencies": {
     "rwlock": "^5.0.0",
     "sqlite3": "^3.1.13",
-    "yargs": "^9.0.1"
+    "yargs": "^9.0.1",
+    "http-auth": "^3.2.3"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Belledonne Communications",
-  "license": "GNU GPL"
+  "license": "GPL-3.0"
 }
