--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -46,7 +46,7 @@ include_directories(${BELLESIP_INCLUDE_DIRS})
 add_executable(lime_tester ${SOURCE_FILES_CXX} ${HEADER_FILES_CXX})
 set_target_properties(lime_tester PROPERTIES LINKER_LANGUAGE CXX)
 target_include_directories(lime_tester PUBLIC ${BCTOOLBOX_TESTER_INCLUDE_DIRS})
-target_link_libraries(lime_tester ${LIME_LIBRARIES_FOR_TESTER} ${BCTOOLBOX_LIBRARIES} ${BCTOOLBOX_TESTER_LIBRARIES} ${BELLESIP_LIBRARIES} ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN} ${SQLITE3_LIBRARIES})
+target_link_libraries(lime_tester ${LIME_LIBRARIES_FOR_TESTER} ${BCTOOLBOX_LIBRARIES} ${BCTOOLBOX_TESTER_LIBRARIES} ${BELLESIP_LIBRARIES} ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN})
 
 if(APPLE)
 	set_target_properties(lime_tester PROPERTIES LINK_FLAGS "-stdlib=libc++")
