--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCE_FILES_CXX
 	lime_double_ratchet-tester.cpp
 	lime_lime-tester.cpp
 	lime_helloworld-tester.cpp
+	lime_crypto-tester.cpp
 )
 
 bc_apply_compile_flags(SOURCE_FILES_CXX STRICT_OPTIONS_CPP STRICT_OPTIONS_CXX)
