Add make doc and improve the code documentation + some code cleaning in lime_x3dh_protocol.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ include(CheckSymbolExists)
 include(CheckLibraryExists)
 include(CMakePushCheckState)
 include(CMakePackageConfigHelpers)
+include(CPack)
 
 cmake_minimum_required(VERSION 3.0)
 project(lime VERSION 0.0.1 LANGUAGES CXX)
@@ -142,6 +143,17 @@ install(FILES
 	DESTINATION ${ConfigPackageLocation}
 )
 
+# Doxygen
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+	add_custom_target(doc
+		${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+		COMMENT "Generating API documentation with Doxygen" VERBATIM
+)
+endif()
+
 # CPack settings
 set(CPACK_PACKAGE_NAME "lime")
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
@@ -152,4 +164,3 @@ set(CPACK_SOURCE_IGNORE_FILES
         "/\\\\..+"
 )
 
-include(CPack)
