Add test/bench on large groups

--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -39,6 +39,7 @@ set(SOURCE_FILES_CXX
 	lime_lime-tester.cpp
 	lime_helloworld-tester.cpp
 	lime_crypto-tester.cpp
+	lime_massive_group-tester.cpp
 )
 
 bc_apply_compile_flags(SOURCE_FILES_CXX STRICT_OPTIONS_CPP STRICT_OPTIONS_CXX)
