--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,9 @@ if(ENABLE_STATIC)
 	set_target_properties(lime-static PROPERTIES OUTPUT_NAME lime)
 	target_include_directories(lime-static PUBLIC ${BCTOOLBOX_INCLUDE_DIRS} ${SOCI_INCLUDE_DIRS} ${SOCI_INCLUDE_DIRS}/soci)
 	target_link_libraries(lime-static INTERFACE ${BCTOOLBOX_CORE_LIBRARIES} ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN})
+	if(ENABLE_PROFILING)
+		set_target_properties(lime-static PROPERTIES LINK_FLAGS "-pg")
+	endif()
 endif()
 if(ENABLE_SHARED)
 	add_library(lime SHARED ${LIME_HEADER_FILES} ${LIME_SOURCE_FILES_C} ${LIME_SOURCE_FILES_CXX})
