--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,15 +157,4 @@ if (DOXYGEN_FOUND)
 )
 endif()
 
-# CPack settings
-set(CPACK_PACKAGE_NAME "lime")
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-set(CPACK_SOURCE_GENERATOR "TGZ")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
-set(CPACK_SOURCE_IGNORE_FILES
-        "^${CMAKE_BINARY_DIR}"
-        "/\\\\..+"
-)
-
-include(CPack)
-
+add_subdirectory(build)
