--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -24,6 +24,10 @@ set(HEADER_FILES
 	lime.hpp
 )
 
+if (ENABLE_C_INTERFACE)
+	set(HEADER_FILES ${HEADER_FILES} lime_ffi.h)
+endif()
+
 set(LIME_HEADER_FILES )
 foreach(HEADER_FILE ${HEADER_FILES})
 	list(APPEND LIME_HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/lime/${HEADER_FILE}")
