Fix windows build - std::max conflict - unused variable - string buffer size
Fix windows build
- intanciate templated class defined over multiple translation units

Fix windows build
- intanciate templated class defined over multiple translation units
- explicit cast

Fix windows build
- intanciate templated class defined over multiple translation units

Fix build on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ if(MSVC)
 	if(ENABLE_STRICT)
 		list(APPEND STRICT_OPTIONS_CPP "/WX")
 	endif()
+	# avoid conflicts with std::min and std::max
+	add_definitions("-DNOMINMAX")
 else()
 	if (ENABLE_PROFILING)
 		list(APPEND STRICT_OPTIONS_CXX "-g -pg")
