JNI improve testing

--- a/tester/java/CMakeLists.txt
+++ b/tester/java/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(Java REQUIRED)
 include(UseJava)
 
 set (LIMETESTER_SOURCE_FILES_JAVA
+	org/linphone/limeTester/HelloWorld.java
 	org/linphone/limeTester/LimeTester.java
 )
 
