Manage multithread - ongoing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIME_PRIVATE_HEADER_FILES
 	lime_lime.hpp
 	lime_crypto_primitives.hpp
 	lime_log.hpp
+	lime_mutex.hpp
 )
 set(LIME_SOURCE_FILES_CXX
 	lime.cpp
