--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,8 +69,7 @@ if(ENABLE_SHARED)
 	set_target_properties(lime PROPERTIES VERSION ${LIME_SO_VERSION})
 	target_include_directories(lime PUBLIC ${BCTOOLBOX_INCLUDE_DIRS} ${SOCI_INCLUDE_DIRS} ${SOCI_INCLUDE_DIRS}/soci ${JNI_INCLUDE_DIRS})
 	target_link_libraries(lime PRIVATE ${BCTOOLBOX_CORE_LIBRARIES} ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN} ${JNI_LIBRARIES})
-	# TODO: replace by if(APPLE) when we want to make apple framework on linphone-desktop too
-	if(IOS)
+	if(APPLE)
 		if(IOS)
 			set(MIN_OS ${LINPHONE_IOS_DEPLOYMENT_TARGET})
 		else()
