Fix windows build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,9 @@ project(lime VERSION 0.0.1 LANGUAGES ${LANGUAGES_LIST})
 set(LIME_SO_VERSION "0")
 set(LIME_VERSION ${PROJECT_VERSION})
 
+if(MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
