--- a/cmake/LimeConfig.cmake.in
+++ b/cmake/LimeConfig.cmake.in
@@ -28,21 +28,18 @@
 #  LIME_LIBRARIES - The libraries needed to use lime
 #  LIME_CPPFLAGS - The compilation flags needed to use lime
 
-if(NOT LINPHONE_BUILDER_GROUP_EXTERNAL_SOURCE_PATH_BUILDERS)
-	include("${CMAKE_CURRENT_LIST_DIR}/LimeTargets.cmake")
-endif()
+@PACKAGE_INIT@
+
+set(LIME_TARGETNAME lime)
+
+include("${CMAKE_CURRENT_LIST_DIR}/${LIME_TARGETNAME}Targets.cmake")
 
 if(@ENABLE_SHARED@)
-	set(LIME_TARGETNAME lime)
 	set(LIME_LIBRARIES ${LIME_TARGETNAME})
 else()
 	set(LIME_TARGETNAME lime-static)
 	if(TARGET ${LIME_TARGETNAME})
-		if(LINPHONE_BUILDER_GROUP_EXTERNAL_SOURCE_PATH_BUILDERS)
-			set(LIME_LIBRARIES ${LIME_TARGETNAME})
-		else()
-			get_target_property(LIME_LIBRARIES ${LIME_TARGETNAME} LOCATION)
-		endif()
+		get_target_property(LIME_LIBRARIES ${LIME_TARGETNAME} LOCATION)
 		get_target_property(LIME_LINK_LIBRARIES ${LIME_TARGETNAME} INTERFACE_LINK_LIBRARIES)
 		if(LIME_LINK_LIBRARIES)
 			list(APPEND LIME_LIBRARIES ${LIME_LINK_LIBRARIES})
@@ -50,12 +47,10 @@ else()
 	endif()
 endif()
 
-if(LINPHONE_BUILDER_GROUP_EXTERNAL_SOURCE_PATH_BUILDERS)
-	list(INSERT LIME_INCLUDE_DIRS 0 "${EP_lime_INCLUDE_DIR}")
-else()
-	list(INSERT LIME_INCLUDE_DIRS 0 "@CMAKE_INSTALL_FULL_INCLUDEDIR@")
+get_target_property(LIME_INCLUDE_DIRS ${LIME_TARGETNAME} INTERFACE_INCLUDE_DIRECTORIES)
+if(NOT LIME_INCLUDE_DIRS)
+	set(LIME_INCLUDE_DIRS )
 endif()
-list(REMOVE_DUPLICATES LIME_INCLUDE_DIRS)
 
 set(LIME_CPPFLAGS @LIME_CPPFLAGS@)
 set(LIME_FOUND 1)
