Update tester/CMakeList.txt for bellesip

--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -22,11 +22,7 @@
 
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 
-if(LINPHONE_BUILDER_GROUP_EXTERNAL_SOURCE_PATH_BUILDERS)
-	include("${EP_bellesip_CONFIG_DIR}/BelleSIPConfig.cmake")
-else()
-	find_package(BelleSIP REQUIRED)
-endif()
+find_package(BelleSIP REQUIRED CONFIG)
 
 if(ENABLE_SHARED)
 	set(LIME_LIBRARIES_FOR_TESTER lime)
